[workspace]
members = [
    "dxr",
    "dxr_derive",
    "dxr_client",
    "dxr_server",
    "dxr_server_axum",
    "dxr_tests",
]

[workspace.package]
version = "0.6.0-dev"
edition = "2021"
rust-version = "1.64.0"
license = "MIT OR Apache-2.0"
authors = ["Fabio Valentini <decathorpe@gmail.com>"]
repository = "https://github.com/ironthree/dxr"

[workspace.dependencies]
dxr = { path = "./dxr", version = "0.6.0-dev" }
dxr_derive = { path = "./dxr_derive", version = "0.6.0-dev" }
dxr_client = { path = "./dxr_client", version = "0.6.0-dev" }
dxr_server = { path = "./dxr_server", version = "0.6.0-dev" }
dxr_server_axum = { path = "./dxr_server_axum", version = "0.6.0-dev" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

