[workspace]
members = [
    "dxr",
    "dxr_derive",
    "dxr_client",
    "dxr_server",
    "dxr_tests",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2021"
rust-version = "1.65.0"
license = "MIT OR Apache-2.0"
authors = ["Fabio Valentini <decathorpe@gmail.com>"]
repository = "https://github.com/ironthree/dxr"

[workspace.dependencies]
dxr = { path = "./dxr", version = "0.6.0" }
dxr_derive = { path = "./dxr_derive", version = "0.6.0" }
dxr_client = { path = "./dxr_client", version = "0.6.0" }
dxr_server = { path = "./dxr_server", version = "0.6.0" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

