[package]
name = "dxr_derive"
description = "Implementation details of DXR (derive macros)"
license = "MIT OR Apache-2.0"

version = "0.0.0"
edition = "2021"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
keywords = ["derive", "XML-RPC"]
repository = "https://github.com/ironthree/dxr"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
syn = "1.0.86"
quote = "1.0.15"

[dev-dependencies]
