[package]
name = "dxr"
description = "Declarative XML-RPC"
categories = ["network-programming", "encoding"]
keywords = ["XML-RPC", "client", "server", "derive"]
exclude = ["/wip/"]

license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[[test]]
name = "derive"
path = "tests/derive.rs"
required-features = ["derive", "i8", "nil"]

[dependencies]
dxr_derive = { workspace = true, optional = true }
base64 = "0.21"
chrono = { version = "0.4.19", features = ["std"], default-features = false }
quick-xml = { version = "0.25", features = ["serialize"] }
serde = { version = "1.0.104", features = ["derive"] }
thiserror = "1.0.30"

[dev-dependencies]
chrono = { version = "0.4.19", features = ["clock", "std"], default-features = false }
quickcheck = "1.0"
quickcheck_macros = "1.0"
trybuild = "1"

[features]
# support for derive macros
derive =["dep:dxr_derive"]
# support non-standard <i8> XML-RPC values
i8 = []
# support non-standard <nil> XML-RPC values
nil = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
