[package]
name = "dxr_client"
description = "Declarative XML-RPC (client implementation)"
categories = ["network-programming", "web-programming::http-client", "encoding"]
keywords = ["XML-RPC", "client"]

license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dxr.workspace = true
http = "0.2.6"
log = "0.4.13"
quick-xml = { version = "0.25" , features = ["serialize"] }
reqwest = { version = "0.11", default-features = false, features = ["cookies"] }
thiserror = "1"
url = "2.2"

[dev-dependencies]
# dependencies for examples
tokio = { version = "1.14", features = ["macros", "rt-multi-thread"] }

[features]
# use the default TLS backend of reqwest by default
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
