[package]
name = "dxr_client"
description = "Declarative XML-RPC (client implementation)"
license = "MIT OR Apache-2.0"

version = "0.5.4"
edition = "2021"
rust-version = "1.63.0"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
categories = ["network-programming", "web-programming::http-client", "encoding"]
keywords = ["XML-RPC", "client"]
repository = "https://github.com/ironthree/dxr"

[dependencies]
anyhow = "1.0.53"
dxr_shared = { path = "../dxr_shared", version = "0.5.4" }
http = "0.2.6"
log = "0.4.13"
quick-xml = { version = "0.25" , features = ["serialize"] }
reqwest = { version = "0.11", default-features = false, features = ["cookies"] }
url = "2.2"

[features]
# use the default TLS backend of reqwest by default
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

# support non-standard <i8> XML-RPC values
i8 = ["dxr_shared/i8"]
# support non-standard <nil> XML-RPC values
nil = ["dxr_shared/nil"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
