[package]
name = "dxr_client"
description = "Declarative XML-RPC (client implementation)"
categories = ["network-programming", "web-programming::http-client", "encoding"]
keywords = ["XML-RPC", "client"]

license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dxr.workspace = true
log = "0.4.13"

# reqwest support
http = { version = "0.2.6", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["cookies"], optional = true }
thiserror = { version = "1", optional = true }
url = { version = "2.2", optional = true }

[features]
# use the default TLS backend by default
default = ["reqwest?/default-tls"]

# multicall support
multicall = ["dxr/multicall"]

reqwest = ["dep:http", "dep:reqwest", "dep:thiserror", "dep:url"]

default-tls = ["reqwest?/default-tls"]
native-tls = ["reqwest?/native-tls"]
rustls-tls = ["reqwest?/rustls-tls"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
