[package]
name = "dxr_derive"
description = "Declarative XML-RPC (derive macros)"
license = "MIT OR Apache-2.0"

version = "0.5.1"
edition = "2021"
rust-version = "1.61.0"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
keywords = ["derive", "XML-RPC"]
repository = "https://github.com/ironthree/dxr"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
proc-macro-crate = "1.1.0"
syn = "1.0.86"
quote = "1.0.15"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
