[package]
name = "dxr_derive"
description = "Declarative XML-RPC (derive macros)"
keywords = ["derive", "XML-RPC"]

license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
proc-macro-crate = "3.1.0"
syn = "2.0"
quote = "1.0.15"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
