[package]
name = "dxr_derive"
description = "Declarative XML-RPC (derive macros)"
keywords = ["derive", "XML-RPC"]

license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
proc-macro-crate = "3.1.0"
syn = "2.0"
quote = "1.0.15"

[lints.rust]
explicit_outlives_requirements = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
noop_method_call = "warn"
unreachable_pub = "warn"
unsafe_code = "deny"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
unwrap_used = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
