[package]
name = "dxr_server"
description = "Declarative XML-RPC (server implementation)"
categories = ["network-programming", "web-programming::http-client", "encoding"]
keywords = ["XML-RPC", "server"]

license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dxr.workspace = true
async-trait = "0.1.53"
http = "0.2.6"
quick-xml = { version = "0.26" , features = ["serialize"] }

[package.metadata.docs.rs]
all-features = true
