[package]
name = "dxr_server"
description = "Declarative XML-RPC (server implementation)"
categories = ["network-programming", "web-programming::http-client", "encoding"]
keywords = ["XML-RPC", "server"]

license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dxr.workspace = true
async-trait = "0.1.53"
http = "0.2.6"

# axum support
axum = { version = "0.6", optional = true }
hyper = { version = "0.14", optional = true }
thiserror = { version = "1", optional = true }
tokio = { version = "1.14", features = ["sync"], optional = true }

[features]
default = []

# multicall support
multicall = ["dxr/multicall"]

axum = ["dep:axum", "dep:hyper", "dep:thiserror", "dep:tokio"]

[package.metadata.docs.rs]
all-features = true
