[package]
name = "dxr_server"
description = "Declarative XML-RPC (server implementation)"
categories = ["network-programming", "web-programming::http-client", "encoding"]
keywords = ["XML-RPC", "server"]

license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dxr.workspace = true
async-trait = "0.1.53"
http = "1.0"

# axum support
axum = { version = "0.7", optional = true }
hyper = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true }
tokio = { version = "1.14", features = ["sync"], optional = true }

[features]
default = []

# multicall support
multicall = ["dxr/multicall"]

axum = ["dep:axum", "dep:hyper", "dep:thiserror", "dep:tokio"]

[lints.rust]
explicit_outlives_requirements = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
noop_method_call = "warn"
unreachable_pub = "warn"
unsafe_code = "deny"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
unwrap_used = "warn"

[package.metadata.docs.rs]
all-features = true
