[package]
name = "dxr_server_axum"
description = "Declarative XML-RPC (axum server implementation)"
license = "MIT OR Apache-2.0"

version = "0.5.0-dev"
edition = "2021"
rust-version = "1.60.0"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
categories = ["network-programming", "web-programming::http-client", "encoding"]
keywords = ["XML-RPC", "server"]
repository = "https://github.com/ironthree/dxr"

[dependencies]
anyhow = "1.0.53"
axum = "0.5.4"
dxr_shared = { path = "../dxr_shared", version = "0.5.0-dev" }
dxr_server = { path = "../dxr_server", version = "0.5.0-dev" }
tokio = { version = "1.14", features = ["sync"] }

[dev-dependencies]
# used for example binaries and integration tests
tokio = { version = "1.14", features = ["macros", "rt-multi-thread", "time"] }

[features]
# support non-standard <i8> XML-RPC values
i8 = ["dxr_shared/i8", "dxr_server/i8"]
# support non-standard <nil> XML-RPC values
nil = ["dxr_shared/nil", "dxr_server/nil"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
