[package]
name = "dxr_server_axum"
description = "Declarative XML-RPC (axum server implementation)"
categories = ["network-programming", "web-programming::http-client", "encoding"]
keywords = ["XML-RPC", "server"]

license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dxr_shared.workspace = true
dxr_server.workspace = true
axum = "0.5.4"
hyper = "0.14"
tokio = { version = "1.14", features = ["sync"] }

[dev-dependencies]
# used for example binaries and integration tests
tokio = { version = "1.14", features = ["macros", "rt-multi-thread", "time"] }

[features]
# support non-standard <i8> XML-RPC values
i8 = ["dxr_shared/i8", "dxr_server/i8"]
# support non-standard <nil> XML-RPC values
nil = ["dxr_shared/nil", "dxr_server/nil"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
