[package]
name = "dxr_server_axum"
description = "Declarative XML-RPC (axum server implementation)"
categories = ["network-programming", "web-programming::http-client", "encoding"]
keywords = ["XML-RPC", "server"]

license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dxr.workspace = true
dxr_server.workspace = true
axum = "0.6"
hyper = "0.14"
tokio = { version = "1.14", features = ["sync"] }

[dev-dependencies]
# used for example binaries and integration tests
tokio = { version = "1.14", features = ["macros", "rt-multi-thread", "time"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
