[package]
name = "dxr_shared"
description = "Implementation details of DXR (XML-RPC value de/serialization)"
license = "MIT OR Apache-2.0"

version = "0.0.0"
edition = "2021"
rust-version = "1.56.0"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
categories = ["network-programming", "encoding"]
keywords = ["XML-RPC"]
repository = "https://github.com/ironthree/dxr"

[dependencies]
base64 = "0.13"
chrono = "0.4.19"
quick-xml = { version = "0.22" , features = ["serialize"] }
serde = { version = "1.0.104", features = ["derive"] }
thiserror = "1.0.30"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"

[features]
default = ["i8", "nil"]
i8 = []
nil = []

[package.metadata.docs.rs]
all-features = true
